npm build scripts

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+  "scripts": {    
+    "preinstall": "npm install -g webpack",
+    "post:install":"npm run build",    
     "build:dev": "webpack -d -w --progress",
-    "build": "webpack -p --progress"
+    "build": "webpack -p --progress",
+    "prestart": "npm install",
+    "start": "docker run --name stuartohare.com -d -p 8080:80 stuartohare.com"
   },
   "author": "Stuart O'Hare",
   "license": "ISC",
